feat(client): :sparkles: drag and drop feature for register

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,5 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  background-color: var(--green-300);
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--green-500);
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: inherit;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
+}
+
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: var(--green-500) var(--green-300);
+}
+
 @media (prefers-color-scheme: dark) {
 }
